prod/sphinx.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sphinx
  namespace: zcorrecteurs-prod
  labels:
    app: sphinx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sphinx
  template:
    metadata:
      labels:
        app: sphinx
    spec:
      containers:
      - name: server
        image: docker.pkg.github.com/zcorrecteurs/zcorrecteurs/sphinx:c7e27be39ba8368d5e779b653dc29d300b01b424
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
      imagePullSecrets:
      - name: regcred
---
kind: Service
apiVersion: v1
metadata:
  name: sphinx
  namespace: zcorrecteurs-prod
spec:
  selector:
    app: sphinx
  ports:
  - name: search
    protocol: TCP
    port: 5000
