prod/webserver.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  namespace: zcorrecteurs-prod
  labels:
    app: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: server
        image: docker.pkg.github.com/zcorrecteurs/zcorrecteurs/webserver:7b545dfc1b8301630ff5f3e8f06f2f643290f294
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
      imagePullSecrets:
      - name: regcred
---
kind: Service
apiVersion: v1
metadata:
  name: zcorrecteurs
  namespace: zcorrecteurs-prod
spec:
  selector:
    app: webserver
  ports:
  - name: http
    protocol: TCP
    port: 80
