prod/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zcorrecteurs
  namespace: zcorrecteurs-prod
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/issuer: letsencrypt-prod
spec:
  rules:
  - host: zcorrecteurs.fr
    http:
      paths:
      - backend:
          serviceName: zcorrecteurs
          servicePort: 80
  - host: www.zcorrecteurs.fr
    http:
      paths:
      - backend:
          serviceName: zcorrecteurs
          servicePort: 80
  tls:
  - hosts:
    - zcorrecteurs.fr
    - www.zcorrecteurs.fr
    secretName: traefik-cert
