prod/zcorrecteurs.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  namespace: zcorrecteurs-prod
  labels:
    app: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: server
        image: docker.pkg.github.com/zcorrecteurs/zcorrecteurs/webserver:de4c6ed9231e96e8522b6c4c007a10df7a4b03df
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
      imagePullSecrets:
      - name: regcred
---
kind: Service
apiVersion: v1
metadata:
  name: zcorrecteurs
  namespace: zcorrecteurs-prod
spec:
  selector:
    app: webserver
  ports:
  - name: http
    protocol: TCP
    port: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zcorrecteurs
  namespace: zcorrecteurs-prod
spec:
  rules:
  - host: zcorrecteurs-prod.lb.corrigraphie.net
    http:
      paths:
      - backend:
          serviceName: zcorrecteurs
          servicePort: 80
  - host: zcorrecteurs.fr
    http:
      paths:
      - backend:
          serviceName: zcorrecteurs
          servicePort: 80
  - host: www.zcorrecteurs.fr
    http:
      paths:
      - backend:
          serviceName: zcorrecteurs
          servicePort: 80
